fix(footer): Two lines on small devices

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -59,6 +59,10 @@
   justify-content: center;
 }
 
+.center--text {
+  text-align: center;
+} 
+
 .bottom {
   display: flex;
   flex-direction: column;
